--- a/client/components/toolbar/toolbar.view.ng.html
+++ b/client/components/toolbar/toolbar.view.ng.html
@@ -9,12 +9,9 @@
       </button>
       <a href="/" class="navbar-brand">workbaseApp</a>
     </div>
-    <div collapse="!isCollapsed" class="navbar-main navbar-collapse collapse">
+    <div class="navbar-main navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="/about">About</a></li>
-        <li>
-          <span meteor-include src="loginButtons"></span>
-        </li>
+        <li><a href="/login">登录</a></li>
       </ul>
     </div>
   </div>
