--- a/client/user/views/login.view.ng.html
+++ b/client/user/views/login.view.ng.html
@@ -1,20 +1,20 @@
 <div class="col-md-3 col-md-offset-3">
 <form>
   <div class="form-group">
-    <input type="text" class="form-control" placeholder="用户名">
+    <input type="text" class="form-control" ng-model="user.loginName" placeholder="用户名">
   </div>
   <div class="form-group" ng-hide="opLogin">
-    <input type="text" class="form-control" placeholder="手机号码">
+    <input type="text" class="form-control" ng-model="user.mobile" placeholder="手机号码">
   </div>
   <div class="form-group" ng-hide="opLogin">
-    <input type="text" class="form-control" placeholder="昵称">
+    <input type="text" class="form-control" ng-model="user.nick" placeholder="昵称">
   </div>
   <div class="form-group">
-    <input type="password" class="form-control" placeholder="密码">
+    <input type="password" class="form-control" ng-model="user.password" placeholder="密码">
     <!-- <p class="help-block">Example block-level help text here.</p> -->
   </div>
   <div class="form-group" ng-hide="opLogin">
-    <input type="password" class="form-control" placeholder="验证">
+    <input type="password" class="form-control" ng-model="confirPwd" placeholder="验证">
   </div>
   <div class="checkbox" ng-show="opLogin">
     <label>
