--- a/client/main/main.css
+++ b/client/main/main.css
@@ -4,9 +4,13 @@
   margin: 0;
   padding: 0;
 }
-  
+
 .pagination li {
     display: inline-block;
     padding: 0.5rem;
     margin: 0.5rem;
+}
+
+.itemHide {
+  display: none;
 }
