--- a/client/components/toolbar/toolbar.view.ng.html
+++ b/client/components/toolbar/toolbar.view.ng.html
@@ -7,21 +7,21 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="/" class="navbar-brand">workbaseApp</a>
+      <a href="/" class="navbar-brand">workbase</a>
     </div>
     <div class="navbar-main navbar-collapse collapse">
       <!-- <ul class="nav navbar-nav navbar-right">
         <li><a href="/login">登录</a></li>
       </ul> -->
-      <div class="dropdown pull-right" style="margin-top:0.5em;" ng-class="{itemHide: $state.includes('login')}">
+      <div class="dropdown pull-right" style="margin-top:0.5em;" ng-class="{itemHide: !currentUser}">
         <button class="btn dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
-            {{currentUser.username}}
+            {{currentUser.profile.nick}}
             <span class="caret"></span>
         </button>
         <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-            <li role="presentation"><a href="#" role="menuitem" tabindex="-1">Action</a></li>
+            <li role="presentation"><a href="#" role="menuitem" tabindex="-1">账户设置</a></li>
             <li role="presentation" class="divider"></li>
-            <li role="presentation" ng-click="logout()"><a href="#" role="menuitem" tabindex="-1">退出</a></li>
+            <li role="presentation" ng-click="logout()"><a href="#" role="menuitem" tabindex="-1">退出系统</a></li>
         </ul>
     </div>
     </div>
