--- a/client/user/views/register.view.ng.html
+++ b/client/user/views/register.view.ng.html
@@ -2,6 +2,7 @@
 <form ng-submit="createUser(user)">
   <div class="form-group">
     <input type="text" class="form-control" ng-model="user.username" placeholder="用户名">
+    <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="left" title="Tooltip on left">Tooltip on left</button>
   </div>
   <div class="form-group">
     <input type="text" class="form-control" ng-model="user.mobile" placeholder="手机号码">
