--- a/client/user/views/login.view.ng.html
+++ b/client/user/views/login.view.ng.html
@@ -7,17 +7,23 @@
     <input type="password" class="form-control" ng-model="user.password" placeholder="密码">
     <!-- <p class="help-block">Example block-level help text here.</p> -->
   </div>
-  <div class="checkbox">
-    <label>
-      <input type="checkbox"> 自动登录
-    </label>
+  <div class="form-group">
+    <div class="row">
+      <div class="col-md-6">
+        <div class="checkbox">
+           <label><input type="checkbox"> 十天内免登录 </label>
+        </div>
+      </div>
+      <div class="col-md-6" style="margin-top:12px;">
+        <a style="cursor:pointer;" class="pull-right" ui-sref="findpwd">忘记密码</a>
+      </div>
+    </div>
   </div>
   <div>
     <button type="submit" class="btn btn-primary" style="margin-right:3em;">登  录</button>
-    <a style="cursor:pointer;" ui-sref="findpwd">忘记密码</a>
-  </div>
-  <div class="pull-right">
-    我还没有创建 <a style="cursor:pointer;" ui-sref="register">创建新账户</a>
+    <div class="pull-right" style="margin-top:12px;">
+      <a style="cursor:pointer;" ui-sref="register">创建新账户</a>
+    </div>
   </div>
 </form>
 </div>
