--- a/client/components/toolbar/toolbar.view.ng.html
+++ b/client/components/toolbar/toolbar.view.ng.html
@@ -19,7 +19,7 @@
             <span class="caret"></span>
         </button>
         <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-            <li role="presentation"><a href="#" role="menuitem" tabindex="-1">账户设置</a></li>
+            <li role="presentation" ui-sref="settings.company"><a href="#" role="menuitem" tabindex="-1">账户设置</a></li>
             <li role="presentation" class="divider"></li>
             <li role="presentation" ng-click="logout()"><a href="#" role="menuitem" tabindex="-1">退出系统</a></li>
         </ul>
